# future-aligned-proposals

./: .gitignore  README.md  pyproject.toml
analysis/: ablate_citation_types.py  ablate_num_papers.py  analyze_predictions.py  correlate_human_auto.py  evaluate_ablation.py  judge_proposal_quality.py
data/: README.md
data_synthesis/: build.py  build_test_data.py  generate_stepwise_cot.py  one_layer_sft.py  pipeline.py  structuring.py
evaluation/: evaluate.py  validate_robustness.py
human_evaluation/: analyze_annotations.py  serve_comparison.py  split_batches.py
inference/: generate_qwen_predictions.py  prompting.py
sft/: README.md  finetune_llama.py  finetune_qwen.py
utils/: api.py  arxiv_download.py  paper_filters.py  semantic_api.py
